# payroll-analytics

./: README.md  pyproject.toml
app/: db.sqlite3
app/app/: settings.py
app/companies/: admin.py  models.py
app/companies/migrations/: 0001_initial.py
app/employees/: models.py
app/employees/migrations/: 0001_initial.py
app/payroll_items/: apps.py  models.py
app/payroll_items/migrations/: 0001_initial.py
app/payrolls/: admin.py  models.py
app/payrolls/migrations/: 0001_initial.py
scripts/: generate_fake_payroll.py
