[tool.poetry]
name = "payroll-analytics"
version = "0.1.0"
description = ""
authors = ["RechierliSimoes <rechierliwork14@outlook.com>"]
readme = "README.md"
packages = [{include = "payroll_analytics"}]

[tool.poetry.dependencies]
python = "^3.11"
django = ">=5.0,<5.1"
psycopg2-binary = "^2.9.11"
pandas = "^2.3.3"
openpyxl = "^3.1.5"
pdfplumber = "^0.11.8"
faker = "^40.1.0"
python-dotenv = "^1.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
